ZWSP start of .optlist for correct bullet alignment

--- a/style.scss
+++ b/style.scss
@@ -51,6 +51,7 @@
 }
 *.optlist { Padding: 0;
 
+	&::BEFORE { Content: "\200B" }
 	&::AFTER {
 		Display: Block;
 		Clear: Both;
